src/objects/Address__c.object
<CustomObject>
    <description>Created this custom object to track Address information.</description>
    <fields>
        <fullName>Account_Party_Id__c</fullName>
        <formula>Account__r.Party_Id__c</formula>
        <label>Account Party Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Field tracks the date for legacy address. For all new address created in Salesforce, this will be defaulted to today&apos;s date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Active Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address_18_Digit_Id__c</fullName>
        <description>This will convert the 15 digit Id to 18 digit</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address 18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Straße, Hausnummer</inlineHelpText>
        <label>Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Zusätzliche Informationen</inlineHelpText>
        <label>Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Alternativer Empfänger</inlineHelpText>
        <label>Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Error Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address needs to be locked when an Order is activated so that it is not updated.</description>
        <label>Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date_With_Oracle__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Sync Date With Oracle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oracle_Cust_Site_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Cust Site Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Customer_Id__c</fullName>
        <formula>Account__r.Customer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Location_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Party_Site_Id__c</fullName>
        <description>Field will be populated via Integration from Oracle cloud</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Site Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOS_Unique_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SOS Unique ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_To_Oracle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To Oracle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Create - Sent</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Update - Sent</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Delete - Sent</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>Merge - Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Of_Origin_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Of Origin ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Of_Origin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Of Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>AT_Address</fullName>
        <active>true</active>
        <description>Austria Address</description>
        <label>AT Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>BE_Address</fullName>
        <active>true</active>
        <description>Address for Belgium</description>
        <label>BE Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Address</fullName>
        <active>true</active>
        <description>Canadian Address</description>
        <label>CA Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>CH_Address</fullName>
        <active>true</active>
        <description>Switzerland Address</description>
        <label>CH Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>DE_Address</fullName>
        <active>true</active>
        <description>Germany Address</description>
        <label>DE Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>DIST_Address</fullName>
        <active>true</active>
        <description>International Distributor Address</description>
        <label>International Distributor Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>INTL_Clinical_Address</fullName>
        <active>true</active>
        <description>OUS Clinical Address</description>
        <label>INTL Clinical Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intl_Address</fullName>
        <active>true</active>
        <description>International Address</description>
        <label>Intl Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>SI_Address</fullName>
        <active>true</active>
        <description>SI Address</description>
        <label>SI Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Address</fullName>
        <active>true</active>
        <description>Address for GB and IE Countries</description>
        <label>UK Address</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Addresses_4_CH_AT_Shd_Start_With_Alphabe</fullName>
        <active>true</active>
        <description>Addresses for CH and AT are incorrectly imported into Salesforce from Google Maps API. The Number should follow the street name.</description>
        <errorConditionFormula>AND(OR( TEXT(Country__c) = &quot;Switzerland&quot;, TEXT(Country__c) = &quot;Austria&quot;),
REGEX( Address_Line_1__c , &quot;\\d+?.*&quot;))</errorConditionFormula>
        <errorMessage>Address should not start with a number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Address_Country_Selection_Chk</fullName>
        <active>true</active>
        <description>Chosen address country should match the default Country selection on the Account record.</description>
        <errorConditionFormula>AND( 
ISCHANGED(Country__c),
OR(
ISBLANK(Text(Country__c)),
Text(Account__r.Country__c) != Text(Country__c)
)
)</errorConditionFormula>
        <errorMessage>Address country does not match with the Account country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Address_Fields_Are_Required</fullName>
        <active>true</active>
        <description>Rule to verify if all address fields are filled in when saving address record</description>
        <errorConditionFormula>OR( ISBLANK(Address_Line_1__c ) 
, ISBLANK( City__c ),ISBLANK( Postal_Code__c ),ISBLANK( TEXT(Country__c) ))</errorConditionFormula>
        <errorMessage>Address Line 1, City,  Postal Code and Country are required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Address_Type_Cannot_Be_Changed</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Type__c )</errorConditionFormula>
        <errorMessage>Address Type cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Address_Type_Is_Required</fullName>
        <active>true</active>
        <description>Address Type is required on Address creation</description>
        <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
        <errorMessage>Type is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>All_Locked_Addresses_Not_Updateable</fullName>
        <active>true</active>
        <description>If an Address is Locked, it should not be updated.</description>
        <errorConditionFormula>AND(  IsLocked__c, 
NOT(OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;Data Integrator&quot;
)),
OR(
ISCHANGED(Account__c),  ISCHANGED(Address_Line_1__c),  ISCHANGED(Address_Line_2__c),  ISCHANGED(Address_Line_3__c) ,  ISCHANGED(Business_Name__c),  ISCHANGED(City__c),  ISCHANGED(Country__c),  ISCHANGED(First_Name__c),  ISCHANGED(Last_Name__c),  ISCHANGED(Postal_Code__c),  ISCHANGED(Primary_Phone__c),  ISCHANGED(RecordTypeId),  ISCHANGED(State__c),  ISCHANGED(Type__c)))</errorConditionFormula>
        <errorMessage>Locked Address can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_PostalCode_Validation</fullName>
        <active>true</active>
        <description>Postal Code should follow the pattern.</description>
        <errorConditionFormula>AND(NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
BEGINS(RecordType.DeveloperName, &apos;CA&apos;),
NOT(ISBLANK(  Postal_Code__c)),
NOT(REGEX(Postal_Code__c, &apos;[A-Z][0-9][A-Z] [0-9][A-Z][0-9]&apos;)))</errorConditionFormula>
        <errorDisplayField>Postal_Code__c</errorDisplayField>
        <errorMessage>Invalid Postal Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Province_Validation</fullName>
        <active>true</active>
        <description>Province is required.</description>
        <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),NOT($User.Alias = &quot;autoproc&quot;),
    BEGINS(RecordType.DeveloperName, &apos;CA&apos;),
    ISBLANK(Text(State__c))
)</errorConditionFormula>
        <errorMessage>Province is a required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Street_Should_Not_B_More_Than_30_Chr</fullName>
        <active>false</active>
        <description>Address lines should not be more than 30 characters in length</description>
        <errorConditionFormula>OR
(
	AND(  
		NOT(ISBLANK(Address_Line_1__c)),
		TEXT(Country__c) = &apos;Canada&apos;, 
		LEN(Address_Line_1__c) &gt; 30
	),
	AND(
		NOT(ISBLANK(Address_Line_2__c)),
		TEXT(Country__c) = &apos;Canada&apos;, 
		LEN(Address_Line_2__c) &gt; 30
	),
	AND(
		NOT(ISBLANK(Address_Line_3__c)),
		TEXT(Country__c) = &apos;Canada&apos;, 
		LEN(Address_Line_3__c) &gt; 30
	)
)</errorConditionFormula>
        <errorMessage>Address lines should not be more than 30 characters in length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DE_Zip_Should_Be_5_Chars_In_Length</fullName>
        <active>true</active>
        <description>Zip cannot be more or less than 5 characters in Length for Germany</description>
        <errorConditionFormula>AND(
	TEXT(Country__c) = &apos;Germany&apos;, 
	OR (LEN(Postal_Code__c) &gt; 5, LEN(Postal_Code__c) &lt; 5)  
)</errorConditionFormula>
        <errorMessage>Postal Code should be 5 chars in length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SI_Zip_Should_Be_4_Chars_In_Length</fullName>
        <active>true</active>
        <description>Zip cannot be more or less than 4 characters in Length for Slovenia</description>
        <errorConditionFormula>AND(
	TEXT(Country__c) = &apos;Slovenia&apos;, 
	OR (LEN(Postal_Code__c) &gt; 4, LEN(Postal_Code__c) &lt; 4)  
)</errorConditionFormula>
        <errorMessage>Postal Code should be 4 chars in length.</errorMessage>
    </validationRules>
</CustomObject>